--- a/arsenal/stakater-nordmart-review-api/dev/values.yaml
+++ b/arsenal/stakater-nordmart-review-api/dev/values.yaml
@@ -2,5 +2,5 @@ stakater-nordmart-review-api:
   application:
     deployment:
       image:
-        repository: nexus-docker-stakater-nexus.ROUTE_SUBDOMAIN/stakater-nordmart-review
+        repository: nexus-docker-stakater-nexus.apps.tno1-ams.s9nghh76.lab.kubeapp.cloud/stakater-nordmart-review
         tag: 1.0.0
